# monthly-report-crawler

./: README.md  crawl.sh  pyproject.toml  scrapy.cfg
prtg_crawler/: channel_pipelines.py  historic_pipelines.py  items.py  menu_pipelines.py  middlewares.py  pipelines.py  settings.py
prtg_crawler/model/: Sensors.py  __init__.py  historic.py
prtg_crawler/spiders/: channel_spider.py  sensor_crawler.py  sensor_spider.py
