[tool.poetry]
name = "monthly-report-crawler"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"
packages = [{include = "monthly_report_crawler"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
